# foxbot

./: .gitignore  .travis.yml  Doxyfile  Makefile.am  README.md  conf.c  conf.h  config_lexer.l  config_parser.y  configure.ac  dict.c  foxbot.c  foxbot.conf.example  foxbot.h  foxmemory.c  foxmemory.h  foxsignal.c  foxsignal.h  irc.c  irc.h  list.c  list.h  memory.c  memory.h  message.c  message.h  signal.c  signal.h  socket.c  socket.h  stdinc.h  user.c  user.h
bot/: Makefile.am  foxbot  main.c
include/foxbot/: admin.h  cap.h  channel.h  conf.h  foxbot.h  hook.h  irc.h  irc_literal.h  irc_numeric.h  ircd.h  list.h  memory.h  message.h  module.h  parser.h  plugin.h  rope.h  signal.h  socket.h  user.h  utility.h
plugins/: Makefile.am  echo_test.c  plugin_manager.c
src/: Makefile.am  admin.c  cap.c  channel.c  channel.h  conf.c  conf.h  config_lexer.l  config_parser.y  error.c  error.h  foxbot.c  foxbot.conf.example  foxbot.h  hook.c  irc.c  irc.h  irc_literal.c  irc_numeric.c  ircd.c  ircd.h  list.c  list.h  main.c  memory.c  memory.h  message.c  message.h  module.c  parser.c  plugin.c  rope.c  signal.c  signal.h  socket.c  stdinc.h  user.c  user.h  utility.c
tests/: Makefile.am  check_foxbot  check_foxbot.c  check_foxbot.h  check_foxbot.trs  check_server.c  check_server.h  check_start.c  foxbot.conf  start.c
tests/units/: admin_parse.c  cap_parse.c  channel_parse.c  connect_parse.c  hook.c  ircv3_parse.c  memory_parse.c  parser.c  plugin.c  rope.c  user_parse.c  wallops_parse.c
